--- a/app/styles/sam-icons-with-info.scss
+++ b/app/styles/sam-icons-with-info.scss
@@ -72,10 +72,10 @@
   @media (min-width: 992px) {
     margin-top: 116px;
     .title {
-      font-size: 30px;
+      font-size: 27px;
     }
     .sub-title {
-      font-size: 18px;
+      font-size: 14px;
     }
     .img-container {
       height: 77px;
